Correct pom dependencies

--- a/inheritance/pom.xml
+++ b/inheritance/pom.xml
@@ -15,8 +15,8 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>${hibernate.version}</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.5.4-Final</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -39,7 +39,5 @@
             <version>0.9.18</version>
         </dependency>
     </dependencies>
-
-
 
 </project>
